<resources>
    <string name="app_name">Azerlotereya</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="amount">Məbləğ : xxx manat</string>
    <string name="did_you_forget_password"><u>Şifrənizi unutmusunuz?</u></string>
    <string name="did_you_forget_pincode"><u>Pin kodunuzu unutmusunuz?</u></string>
    <string name="login">DAXİL OL</string>
    <string name="registration">Qeydiyyat</string>
    <string name="login_button_test">Artıq istifadəçi var? <b>Daxil Ol</b></string>
    <string name="register_button_test">İstifadəçi adı mövcud deyil? <b>Qeydiyyatdan keç</b></string>
    <string name="register">Qeydiyyatdan keç</string>
    <string name="pincode_save_information">Xahiş olunur bu <b><u>PİN KODU</u></b> yadda saxlayasınız. Növbəti giriş zamanı sizdən tələb olunacaqdır.</string>
    <string name="ok">OK</string>
    <string name="close">Bağla</string>
    <string name="wrong_login">Uğursuz cəhd</string>
    <string name="wrong_pincode">Yalnış pin kod</string>
    <string name="wrong_login_message">Daxil etdiyiniz istifadəçi adı və şifrə bizim sistemdə uyğun gəlmir. Zəhmət olmasa, yenidən yoxlayın.</string>
    <string name="wrong_pincode_message">Daxil etdiyiniz pin kod düzgün deyil. Zəhmət olmasa, yenidən yoxlayın və ya <b>Pin kodunuzu unutmusunuzmu?</b> düyməsinə basıb öz istifadəçiniz ilə daxil olun.</string>
    <string name="empty_username_message">Zəhmət olmasa email-inizi daxil edin və yenidən yoxlayın.</string>
    <string name="empty_pincode_message">Zəhmət olmasa pin kodunuzu daxil edin və yenidən yoxlayın.</string>
    <string name="empty_password_message">Zəhmət olmasa şifrənizi daxil edin və yenidən yoxlayın.</string>
    <string name="username">E-mail</string>
    <string name="password">Şifrə</string>
    <string name="pincode">Pin kod</string>
    <string name="resume">Davam et</string>
    <string name="send">Göndər</string>
    <string name="minimum_selection">Minimum bilet</string>
    <string name="minimum_selection_text">Siz davam etmək üçün minimum xxx sıra seçməlisiniz.</string>
    <string name="games">Oyunlar</string>
    <string name="terms_and_conditions_text">Siz qeydiyyatdan keçərək <u><b>Müqavilənin şərtləri </b></u> ilə razılaşdığınızı qəbul edirsiniz.</string>
    <string name="terms_and_conditions">Müqavilə</string>
    <string name="accept_age">18 yaşından böyük olduğumu qəbul edirəm</string>
    <string name="wrong">Yanlış</string>
    <string name="minimim_selection">Minimum Seçim</string>
    <string name="error_in_ticket">Sizin biletinizdə yanlışlıqlar var. Onları düzəldin və yenidən yoxlayın</string>
    <string name="error_in_cell">Daxil etdiyin rəqəm həmin xanaya uyğun gəlmir xahiş edirik başqa rəqəm yoxlayın</string>
    <string name="error_ticket_ball_size">Siz tələb olunan qədər rəqəm seçməmisiniz xahiş edirik yenidən yoxlayasınız.</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="my_profile">Mənim Profilim</string>
    <string name="rules">Qaydalar</string>
    <string name="settings">Ayarlar</string>
    <string name="tickets">Biletlərim</string>
    <string name="about_us">Haqqımızda</string>
    <string name="intro">Intro</string>
    <string name="logout">Çıxış</string>
    <string name="payment">Ödəniş</string>
    <string name="increase_balance">Balansı artır</string>
    <string name="payment_methods">Ödəniş növləri</string>
    <string name="wrong_email"> Yanlış email</string>
    <string name="wrong_email_text"> Daxil etdiyiniz email adresi düzgün formata uyğun gəlmir. Zəhmət olmasa email-inizi yoxlayın və yenidən cəhd edin</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="father_name">Ata Adı</string>
    <string name="birthdate">Doğum tarixi</string>
    <string name="passport_id">Şəxsiyyət nömrəsi</string>
    <string name="phone_number">Mobil nömrə</string>
    <string name="dialog_edit_text_example">Example field</string>
    <string name="dialog_message_top_example">This is an example message. To show instructions depending on actions</string>
    <string name="dialog_message_example">This is an example message. Instead of it proper message will be shown on runtime</string>
    <string name="dialog_button_left">Left Button</string>
    <string name="dialog_button_right">Right Button</string>
    <string name="dialog_title_example">Example title</string>
    <string name="password_reset_message">Əgər daxil etdiyiniz email bizim serverdə qeydiyyatdan keçibsə o zaman siz şifrənizin dəyişdirilməsi üçün email qəbul edəcəksiniz.</string>
    <string name="select_numbers_title">Rəqəmləri seçin</string>
    <string name="ticket_selection_message"> - Aşağıdakı cədvəldən xxx ədəd nömrəni işarələyib YADDA SAXLA düyməsinə basın</string>
    <string name="save">Yadda saxla</string>
    <string name="cancel">LƏĞV ET</string>
    <string name="reset">YENİLƏ</string>
    <string name="terms_and_conditions_doc" formatted="false"><![CDATA[<p style="text-align: left;"><strong>Maddə 1 - Tərəflər</strong><br /> Bu Müqavilə Bakı şəhəri, Bül-Bül pr. 19-da yerləşən “Azerlotereya” ASC-ilə (bundan sonra “Təşkilatçı”) və Adı /Soyadı <a href="http://www.azerlotereya.com/">www.azerlotereya.com</a> saytının “Qeydiyyat” hissəsində göstərilən şəxsin (bundan sonra “İştirakçı”nın) arasında aşağıdakı şərtlər əsasında tərtib olunmuşdur.<br /> <strong>Maddə 2 -Terminlər</strong><br /> Aşağıdakı terminlər bu Müqavilədə istifadə edilmişdir:<br /> “Təşkilatçı” (Virtual satıcı) - müqaviləyə əsasən fəaliyyət göstərən və virtual şəraitdə (internet, mobil telefon şəbəkəsi və s. vasitələlrə) lotereya oyunlarının iştirakçıları ilə bütün əlaqələri təmin edən hüquqi şəxs. <br /> “İştirakçı” - “Azerlotereya” ASC-nin <a href="http://www.azerlotereya.com/">www.azerlotereya.com</a> saytı vasitəsi ilə onlayn lotereya oyunlarında iştirak etmək üçün bu Müqaviləni qəbul etmiş fiziki şəxs.<br /> “Onlayn lotereya oyunları”- “Azerlotereya”ASC tərəfindən <a href="http://www.azerlotereya.com/">www.azerlotereya.com</a> saytında təşkil olunan onlayn lotereya oyunları.<br />  <a href="http://www.azerlotereya.com/">www.azerlotereya.com</a> saytı vasitəsi ilə onlayn lotereya oyunlarında Bilet Satışının Təsdiqi - İştirakçıların <a href="http://www.azerlotereya.com/">www.azerlotereya.com</a> virtual mühitində seçib işarələmək şərti ilə satın alındıqları bilet qarşılığında və ya oynadıqları oyun qarşılığında tələb etdikləri təqdirdə göndərilən oyun/satın alınan bilet məlumatlarını və lazım olan digər əlaqəli məsələləri əhatə edən məlumat və ya bu məlumatı əhatə edən e-poçt və ya sms və ya oxşar yollarla göndərilən virtual sənəd. <br /> Hesabın menyusu - <a href="http://www.azerlotereya.com/">www.azerlotereya.com</a> internet səhifəsindən daxil olunan, İştirakçıların virtual mühitdə Şəxsi Kabinet Hesabında reallaşdırdıqları pul köçürmələrinin hesab hərəkətlərinə baxa bildiyi, bank köçürmə ehtiyaclarını reallaşdıra bildikləri və bir sıra icazə verilən əməliyyatları icra edə bildikləri fərdi sahə.</p>
<p style="text-align: left;"><strong>Maddə 3 -  Onlayn lotereyalarda iştirak etmənin şərtləri</strong><br /> 3.1. 18 yaşı tamam olmuş hər bir şəxs bu Müqavilə şərtlərini qəbul etmək şərti ilə “Azerlotereya” ASC-nin onlayn lotereya oyunlarının iştirakçısı ola bilər. <br /> 3.2. Onlayn lotereya oyunlarında iştirak etmək istəyən şəxs lotereya oyunlarının qaydaları ilə tanış olmalı və bu qaydaları qəbul etməlidir;<br /> 3.3. Onlayn lotereya oyunlarında iştirak etmək istəyən şəxs Qeydiyyat formasını doldurduqdan sonra ən qısa müddətdə elektron poçt vasitəsi ilə məlumat alacaq. Məlumat alındıqdan sonra, həmin şəxs İştirakçı qismində Onlayn lotereyalarda iştirak edə bilər.</p>
<p style="text-align: left;"><strong>Maddə 4 - Məsuliyyət:</strong><br /> 4.1 İştirakçının Parolunun hər hansı bir üçüncü şəxs tərəfindən istifadə edilməsi nəticəsində baş verənlərə görə özünün cavabdeh olduğunu, bu əməliyyatlar özü tərəfindən icra edilmədiyi halda “Azerlotereya” ASC-yə qarşı etiraz və iddia hüquqlarından əvvəlcədən imtina etdiyini, bu kimi qaydalara zidd istifadə edən şəxslərin kim olduqlarını araşdırmağa görə “Azerlotereya” ASC-nin öhdəlik daşımadığını qəbul və təsdiq edir. Parolunun hər hansı bir üçüncü şəxs tərəfindən istifadə edildiyini bilən İştirakçı, bu məlumatı dərhal “Azerlotereya” ASC-yə bildirməlidir. <br /> 4.2 İştirakçının Hesabının bağlanılması halında İştirakçı Təşkilatçıdan heç bir kompensasiya tələb etməyəcəyini əvvəlcədən qəbul, bəyan və təsdiq edir. <br /> 4.3 İştirakçı Şəxsi Kabinetindəki Hesabına köçürdükləri məbləğlərə görə şərtsiz cavabdehlik daşıyır. İştirakçı tərəfindən edilən səhv əməliyyatlara görə Təşkilatçı heç bir məsuliyyət daşımır. <br /> 4.4 Onlayn Lotereya Oyunlarda, İştirakçı tərəfindən Oyunla əlaqəli daxil edilən məlumatlar Təşkilatçı tərəfindən düzgün hesab edilərək istifadə olunacaqdır. <br /> 4.5 İştirakçı tərəfindən satın alınan lotereya bileti heç bir şəkildə ləğv edilə və dəyişdirilə bilməz. <br /> 4.6 İştirakçı tərəfindən uduş qazanıldığında bu uduş məbləği əlavə bir əməliyyatın həyata keçirilməsinə ehtiyac olmadan ən gec 24 (iyirmi dörd) saat ərzində Təşkilatçı tərəfindən abunəçinin virtual hesabına əlavə edilir. İştirakçının hesabında olan və İştirakçı tərəfindən tələb edilən məbləğ, Təşkilatçı tərəfindən İştirakçının bank hesabına ən gec 2 (iki) bank günü ərzində köçürülür. <br /> 4.7 Onlayn Lotereya oyunlarının keçirilməsi zamanı baş verə biləcək hər cür rabitə kəsilməsi, fasilələr, sistem qəzaları, texniki səbəblərlə meydana gələn məlumatlandırma mesajlarının və s. getməməsi, gecikməsi halları daxil olmaqla, lakin bunlarla məhdudlaşmayaraq, səhv gecikməli məlumat ötürülməsi yaxud rabitə fasilələrinə görə yaranan zərərlərə görə Təşkilatçı heç bir məsuliyyət daşımır. <br /> 4.8 İştirakçı bu Müqavilənin əhatə etdiyi xidmətlərlə əlaqədar Təşkilatçıya yazılı, Şifahı, İnternet və/ya digər elektron cihazlar vasitəsi ilə çatdırdığı məlumatların düzgün, tam və aktual olduğunu bəyan edir, bu bəyanın səhv olması və/və ya məlumatların səhv verilmiş olması səbəbi ilə yarana biləcək bütün zərərlərə görə İştirakçı məsuliyyət daşıyır. <br /> 4.9 İştirakçının bildirdiyi məlumatlar istiqamətində, məlumatların səhv olması yaxud texniki səbəblər ilə məlumatlandırma mesajlarının və.s-in getməməsinə və gecikməsinə görə yaranan dolayı və/və ya birbaşa zərərlərə görə Təşkilatçı məsuliyyət daşımır. <br /> 4.10 İştirakçı, Təşkilatçı tərəfindən təqdim edilən xidmətlərin istifadəsi zamanı üçüncü şəxslərə və “Azerlotereya” ASC-yə zərər vurması halında, həmin zərərə görə şəxsən cavabdeh olduğunu qəbul, bəyan və təsdiq edir. <br /> 4.11 “Azerlotereya” ASC-nin məlumat bazasına və ya İnternet saytına ediləcək hər hansı bir hücüm nəticəsində, İştirakçı məlumatların pis niyyətli istifadəçilərin əlinə keçməsi və bu məlumatların istifadə edilməsi halında yaranan nəticələrə görə məsuliyyət daşımır.</p>
<p style="text-align: left;"><strong>Maddə 5 - Mübahisəli məsələlərin həlli </strong><br /> 5.1 Mübahisəli məsələlərin və qeyri-müəyyənliklərin həlli Azərbaycan Respublikasının mövcud qanunvericiliyinə əsasən həll edilməlidir. <br /> 5.2 İştirakçı olmaq istəyən şəxslər bu Müqavilənin bəndlərinin hamısını oxuduğunu, məzmundakı bütün maddələri şərtsiz qəbul etdiyini və razılaşdığını əvvəlcədən təsdiq edir.</p>
<p>Əlaqə Məlumatları “Azerlotereya” ASC Baki şəhəri, Bül-Bül prospekti 19;<br /> Tel.: 441 45 15 <br /> Fax: 012 493 97 93         <br /> E-Poçt ünvanı: azerlotereya@azeronline.com<br /> İnternet ünvanı: <a href="http://www.azerlotereya.com/">www.azerlotereya.com</a></p>]]></string>
    <string name="transactions">Əməliyyatlar</string>
    <string name="dont_show">Bu mesajı bir daha göstərmə.</string>
<string name="password_reset">Şifrə yeniləmə</string>
</resources>