<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="#263238"
    android:gravity="top"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textview_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="20dp"
        android:text="Azad HUMBATLI"
        android:textAllCaps="true"
        android:textColor="#ececec"
        android:textSize="20sp"
        android:textStyle="normal" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@drawable/divider" />

    <Button
        android:id="@+id/button_my_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="?attr/selectableItemBackground"
        android:drawableLeft="@drawable/ic_drawer_profile"
        android:drawablePadding="30dp"
        android:gravity="left|center"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:text="@string/my_profile"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="14sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/button_my_tickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawableLeft="@drawable/ic_drawer_ticket"
        android:drawablePadding="30dp"
        android:gravity="left|center"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:text="@string/tickets"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="14sp"
        android:textStyle="normal" />


    <Button
        android:id="@+id/button_transactions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawableLeft="@drawable/ic_drawer_transactions"
        android:drawablePadding="30dp"
        android:gravity="left|center"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:text="@string/transactions"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="14sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/button_rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="?attr/selectableItemBackground"
        android:drawableLeft="@drawable/ic_drawer_rules"
        android:drawablePadding="30dp"
        android:gravity="left|center"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:text="@string/rules"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="14sp"
        android:textStyle="normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@drawable/divider" />


    <Button
        android:id="@+id/button_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawableLeft="@drawable/ic_drawer_intro"
        android:drawablePadding="30dp"
        android:gravity="left|center"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:text="@string/intro"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="14sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/button_about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawableLeft="@drawable/ic_drawer_about"
        android:drawablePadding="30dp"
        android:gravity="left|center"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:text="@string/about_us"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="14sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawableLeft="@drawable/ic_drawer_exit"
        android:drawablePadding="30dp"
        android:gravity="left|center"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="14sp"
        android:textStyle="normal" />



</LinearLayout>