<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">


    <TextView
        android:id="@+id/number_select_label"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center|left"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:text="@string/select_numbers_title"
        android:textColor="#fff"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/selection_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/number_select_label"
        android:padding="10dp"
        android:text="@string/ticket_selection_message"
        android:textColor="#686868"
        android:textSize="14sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selection_description"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="3dp">

        <GridView
            android:id="@+id/number_grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:horizontalSpacing="3dp"
            android:numColumns="8"
            android:padding="5dp"
            android:scrollbars="none"
            android:verticalSpacing="3dp"
            android:visibility="visible" />
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/select_numbers_okay"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button_green"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="#fff"
        android:textSize="15sp" />


</RelativeLayout>